@@ -8,6 +8,11 @@
 			When Changing to a differnt active user as admin, you are now kept on
 			the same page.
 		 (<i>Adam Franco</i>)
+		<li/> New feature:  
+			Segue can now be configured to restrict users to given sites based
+			on the virtual host asked for. Each vhost must be set up on the webserver
+			as well as in the Segue config.
+		 (<i>Gabe Schine</i>)
 		<li/> Bug Fix:
 	 
 			stripped html tags from of first 25 characters of content that is the topic
